# open-chicken-invaders

./: .gitmodules  CMakeLists.txt  README.md
res/: description.xml
res/fonts/: big.xml  medium.xml  small.xml
res/sprites/: asteroid_big_rock.xml  asteroid_small_rock.xml  asteroids.xml  background.xml  bonus_atom.xml  bonus_chicken_leg.xml  boss1.xml  chicken_blue.xml  chicken_cyan.xml  chicken_green.xml  chicken_intro.xml  chicken_orange.xml  chicken_pink.xml  chicken_purple.xml  chicken_red.xml  chicken_roast.xml  chicken_yellow.xml  coin.xml  earth.xml  egg.xml  engine.xml  fighter.xml  flyingsaucer.xml  fork.xml  giftbox_green.xml  giftbox_red.xml  giftbox_yellow.xml  gun1.xml  gun4.xml  iconbomb.xml  jupiter.xml  logo.xml  mars.xml  menuitem.xml  mercury.xml  missile.xml  saturn.xml  shield.xml  smoke.xml  sparc.xml  (+5 more)
res/subtitle/: intro_0.xml
src/: SConstruct  constants.cpp  constants.h  egg.cpp  egg.h  main.cpp  solar_system.cpp  solar_system.h
src/audio/: controller.h  controller_holder.cpp  controller_holder.h  player.cpp  player.h
src/background/: background.cpp  background.h  simple_controller.h
src/context/: context.cpp  context.h  manager.cpp  manager.h  object_holder.h  object_storage.h  objects_storage.h
src/core/: color.cpp  color.h  critical_error.h  drawable.h  event.h  image.cpp  image.h  input.cpp  input.h  keyboard.cpp  keyboard.h  mouse.cpp  mouse.h  rect.h  rectangle_shape.cpp  rectangle_shape.h  shape.cpp  shape.h  sprite.cpp  sprite.h  texture.cpp  texture.h  vector2.h  video_mode.h  window.cpp  window.h  window_style.h
src/diagnostics/: fps.cpp  fps.h
src/diagnostics/benchmark/: benchmark.cpp  benchmark.h
src/font/: font.cpp  font.h
src/game/: state.cpp  state.h
src/levels/: factory.cpp  factory.h  game_level.cpp  game_level.h  game_over.cpp  intro_0.cpp  intro_0.h  intro_1.cpp  intro_level.cpp  intro_level.h  level.cpp  level.h  level_1_1.cpp  level_1_1.h  level_1_10.cpp  level_1_10.h  level_1_2.cpp  level_1_2.h  level_1_4.cpp  level_1_4.h  level_1_5.cpp  level_1_5.h  level_1_8.cpp  level_1_8.h  level_1_9.cpp  level_x2_x3.cpp  level_x2_x3.h  level_x4.cpp  level_x4.h  loader.cpp  loader.h  manager.cpp  manager.h  start_round.cpp  start_round.h
src/levels/interface/: indicator.cpp  indicator.h  interface.cpp  interface.h  lives_indicator.cpp  lives_indicator.h  missiles_indicator.cpp  missiles_indicator.h
src/menu/: background_controller.cpp  background_controller.h  cursor.cpp  cursor.h  mainmenu.cpp  mainmenu.h
src/objects/base/: active.h  animated.cpp  animated.h  animated_collision_object.cpp  animated_collision_object.h  collision_object.cpp  collision_object.h  collision_object_types.h  object.h  sprite.cpp  sprite.h  visible.h
src/objects/bonus/: bonus.cpp  bonus.h  chicken_body.cpp  chicken_body.h  chicken_leg.cpp  chicken_leg.h  chicken_part.cpp  chicken_part.h  coin.cpp  coin.h  switch_gun.cpp  switch_gun.h  upgrade_gun.cpp  upgrade_gun.h
src/objects/characters/: asteroid.cpp  asteroid.h  boss1.cpp  boss1.h  chicken.cpp  chicken.h  jumping_asteroid.cpp  jumping_asteroid.h  paratrooper.cpp  paratrooper.h  player_ship.cpp  player_ship.h  random_chicken.cpp  random_chicken.h  shield.cpp  shield.h  ship.cpp  ship.h  ufo.cpp  ufo.h
src/objects/effects/: unshade_screen.cpp  unshade_screen.h
src/objects/gun/: bullet.cpp  bullet.h  green_gun.cpp  green_gun.h  gun.cpp  gun.h  missile.cpp  missile.h  player_bullet.h  red_gun.cpp  red_gun.h
src/objects/modifiers/: auto_killable.h  blinking.h  expiring.h  hidden.h  moveable.h
src/objects/particles/: bang.cpp  bang.h  exhaust.cpp  exhaust.h  particle.cpp  particle.h  smoke.cpp  smoke.h  spark.cpp  spark.h
src/objects/text/: subtitle_text.cpp  subtitle_text.h  text.cpp  text.h
src/portability/: array.h  chrono.h  cpp11.h  forward_list.h  functional.h  math.h  memory.h  type_traits.h  unordered_map.h
src/res/: description.xml
src/res/fonts/: big.xml  medium.xml  small.xml
src/res/sprites/: asteroid_small_rock.xml  bonus_atom.xml  bonus_chicken_leg.xml  boss1.xml  chicken_blue.xml  chicken_cyan.xml  chicken_green.xml  chicken_intro.xml  chicken_red.xml  chicken_roast.xml  chicken_yellow.xml  coin.xml  engine.xml  fighter_sideview.xml  fork.xml  giftbox_green.xml  giftbox_red.xml  giftbox_yellow.xml  gun3.xml  gun4.xml  heart.xml  hud.xml  iconbomb.xml  neptune.xml  pluto.xml
src/res/subtitle/: intro_0.xml
src/resources/: loader.cpp  loader.h
src/tests/context/: SConstruct  _test_context.cpp
src/tools/: resource_extractor.py
src/utils/: array_size.h  cache.h  cleanup_container.h  fast_trigonometry.cpp  fast_trigonometry.h  for_each.h  math.h  transparent_equal.h  transparent_string_hash.h
utility/: download_resources.py
